// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Characters/> Deveria ao buscar um characters que não existe mostrar uma mensagem que não foi encontrado 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value="batman"
        />
      </div>
    </header>
    <div
      class="sc-hpvRAK"
    >
      No characters found. Keep searching, your hero is out there! 🦸‍♂️🔍
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar a partir da inicial do nome dos personagens 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value="H"
        />
      </div>
    </header>
    <div
      class="sc-dbgcnz"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS jlbgph"
        data-testid="id-cards-container"
      >
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Image for character Hulk"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar a partir do nome dos personagens 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value="Hulk"
        />
      </div>
    </header>
    <div
      class="sc-dbgcnz"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS jlbgph"
        data-testid="id-cards-container"
      >
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Image for character Hulk"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar os characters ao renderizar a aplicação 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value=""
        />
      </div>
    </header>
    <div
      class="sc-dbgcnz"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS jlbgph"
        data-testid="id-cards-container"
      >
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Image for character 3-D Man"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Image for character Hulk"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar os characters e listalos em cards na tela caso tenha characters 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value=""
        />
      </div>
    </header>
    <div
      class="sc-dbgcnz"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS jlbgph"
        data-testid="id-cards-container"
      >
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Image for character 3-D Man"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Image for character Hulk"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria buscar todos os personagens caso a busca seja vazia 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value=" "
        />
      </div>
    </header>
    <div
      class="sc-dbgcnz"
      data-testid="id-cards-characters"
    >
      <section
        class="sc-gZGWnS jlbgph"
        data-testid="id-cards-container"
      >
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              3-D Man
            </h2>
            <img
              alt="Image for character 3-D Man"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
        <button
          class="sc-cLrhaH jMQJbC"
          data-testid="id-cards-content"
        >
          <div
            class="sc-kvAqsT dvzAXP"
            data-testid="id-card-container"
          >
            <h2
              class="sc-cdtKKh gUWuCS"
              data-testid="id-typograph-name-content"
            >
              Hulk
            </h2>
            <img
              alt="Image for character Hulk"
              class="sc-grJzXs jvyAXi"
              data-testid="id-img-content"
              src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
            />
          </div>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Characters/> Deveria renderizar na tela os componentes container-characters, container-search-characters e searchCharacters 1`] = `
<div>
  <div
    class="sc-jWWaec jIuEVH"
    data-testid="id-container-characters"
  >
    <header
      class="sc-fIGkQR bxjFFY"
      data-testid="id-container-search-characters"
    >
      <div
        class="sc-hUozzH kmOwEQ"
        data-testid="id-characters-header-icon-container"
      >
        <svg
          data-testid="id-characters-header-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </div>
      <div
        class="sc-fmMAES YAtuU"
      >
        <input
          class="sc-dSyItl gCvvLA"
          data-testid="id-characters-search"
          placeholder="Search for your favorite Marvel Hero"
          type="text"
          value=""
        />
      </div>
    </header>
    <div
      class="sc-hpvRAK"
    >
      No characters found. Keep searching, your hero is out there! 🦸‍♂️🔍
    </div>
  </div>
</div>
`;
